ash: Fix panel shelf item removal on multi-user switch.

Bug: 733155, 557406
Test: Switching ChromeOS users hides user-specific panel shelf items.
Change-Id: Ic72d3f2646cadb426f4bf0341f26bf27dd26aa53